--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "jade": "^1.11.0",
     "kerberos": "^0.0.21",
     "lodash": "^4.14.2",
+    "media-typer": "^0.3.0",
     "multer": "^1.2.0",
     "nconf": "^0.8.4",
     "prompt": "^1.0.0",
+    "raw-body": "^2.1.7",
     "winston": "^2.2.0"
   },
   "devDependencies": {
